[package]
name = "serverseeker"
version = "0.2.8"
edition = "2021"
description = "Rust wrapper for DAMcrafts Minecraft ServerSeeker API"
keywords = ["minecraft", "serverscanning"]
repository = "https://github.com/Paddyk45/serverseeker-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.8.1", features = ["https"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
failure = "0.1.8"
