[package]
name = "serverseeker"
version = "0.3.4"
edition = "2021"
description = "Rust wrapper for DAMcrafts Minecraft ServerSeeker API"
keywords = ["minecraft", "serverscanning"]
repository = "https://github.com/Paddyk45/serverseeker-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["serde_json", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
failure = "0.1.8"
derive_builder = "0.12.0"
anyhow = "1.0.75"
thiserror = "1.0.49"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
